cmake_minimum_required(VERSION 3.0)
project(unitree)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_EXPORT_COMPILE_COMMANDS ON)

if(NOT CMAKE_BUILD_TYPE)
  set(CMAKE_BUILD_TYPE Release)
endif()

set(ROBOTICS_INCLUDE_DIR ${CMAKE_CURRENT_SOURCE_DIR})
set(ROBOTICS_INCLUDE_DIRS ${CMAKE_CURRENT_SOURCE_DIR})
set(UNITREE_PROJECT_ROOT ${CMAKE_CURRENT_SOURCE_DIR})
list(APPEND CMAKE_MODULE_PATH ${CMAKE_CURRENT_SOURCE_DIR}/cmake)

CMAKE_POLICY(SET CMP0048 NEW)
CMAKE_POLICY(SET CMP0057 NEW)
CMAKE_POLICY(SET CMP0063 NEW)

add_subdirectory(drivers)
add_subdirectory(third_party)
add_subdirectory(simulator)

add_subdirectory(platforms)
